p2/confs/app-two-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two-pod
  template:
    metadata:
      labels:
        app: app-two-pod
    spec:
      containers:
        - name: app-two-container
          image: arthurprnt/hello-k8s:latest
          ports:
            - containerPort: 8080
