p2/confs/app-three-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  selector:
    app: app-three-pod
  ports:
    - port: 80
      targetPort: 80
