p2/confs/app-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  selector:
    app: app-two-pod
  ports:
    - port: 80
      targetPort: 80
